<resources>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="este_es_un_nuevo_tutorial">Este es un nuevo tutorial</string>

    <!--LOGIN-->
    <string name="login_registro">Bienvenido aqui podras registrarte</string>
    <string name="login_ingreso">Bienvenido coloca tu nombre de usuario y contraseña</string>
    <string name="txtusername">NOMBRE</string>
    <string name="txtpassword">CONTRASEÑA</string>
    <string name="txtConfirmpass">CONFIRMAR CONTRASEÑA</string>
    <string name="placeholderName">Ingresa tu nombre</string>
    <string name="placeholderPass">Ingresa tu contraseña</string>
    <string name="placeholderConfirmPass">Vuelve a ingresar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresar">Ingresar</string>
    <string name="noaccount">¿Aun no tienes cuenta?</string>

    <string name="verpass">Ver contraseña</string>
    <string name="rememberme">Recordarme</string>


    <!--Presentacion-->
    <string name="presentacion">Nonasoft es una aplicacion que te ayudara, mediante tutoriales didacticos, aprender el manejo basico de tu celular.</string>


    <string name="Nonasoft">NonaSoft</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="desafio">¡LA NONA TE DESAFIA!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tutorial_part">tutorialPart</string>


    <string name="introduccionOne">Esta aplicacion te ayudara a entender el manejo de tu celular, desde lo mas basico a lo mas complejo como por ejemplo:</string>
    <string name="introduccionTwo">Aqui podras visualizar el menu principal de la aplicacion. Se divide en tres niveles Inicial, Intermedio y Avanzado, podra elegir cualquiera de las opciones
    para comenzar.</string>
    <string name="introduccionThree">En la imagen podra observar el ejemplo de un tutorial para agregar un contacto</string>
    <string name="introductionFour">Tambien tendras la posibilidad de jugar al juego de preguntas y respuestas que te da la posibildiad de
    avanzar y obtener logros</string>

    <string name="imgIntroductionOne">Tomar fotos</string>
    <string name="imgIntroductionTwo">Escuchar Musica</string>
    <string name="imgIntroductionTrhee">Utilizar Aplicaciones</string>

    <!--Buttons-->
    <string name="siguiente">Siguiente</string>
    <string name="comenzar">comenzar</string>
    <string name="entendido">entendido</string>
    <string name="jugar">JUGA Y EVALUATE</string>
    <string name="title_activity_segunda">SegundaActivity</string>
    <string name="tutoriales">TUTORIALES</string>
    <string name="minijuego">JUEGOS</string>

    <!--INICIAL LEVEL-->
<<<<<<< HEAD
    <string name="inicial1">CONFIGURACION/ USO INICIAL</string>
    <string name="inicial2">MANEJO DE CONTACTOS</string>
    <string name="inicial3">GESTION DE LLAMADAS/SMS</string>
=======
<<<<<<< HEAD
    <string name="inicial1">CONFIGURACION/ USO INICIAL</string>
    <string name="inicial2">MANEJO DE CONTACTOS</string>
    <string name="inicial3">GESTION DE LLAMADAS/SMS</string>
=======
    <string name="inicial1">CONFIGURACION BASICA DEL CELULAR</string>
    <string name="inicial2">LLAMADAS Y CONTACTOS</string>
    <string name="inicial3">GALERIA DE IMAGENES</string>
>>>>>>> a750cbe73a94b14198f76895f838e894c7b222d6
>>>>>>> 96755b89d81283293e2ad2ac2f8d2072f0d08b35
    <string name="inicial4">MENSAJES DE TEXTO</string>
    <string name="niveles">NIVELES</string>
    <string name="gContacts">GESTION DE CONTACTOS</string>
    <string name="llamadas">LLAMADAS</string>
    <string name="camera">USO DE CAMARA</string>
<<<<<<< HEAD

    <!--INTERMEDIO LEVEL-->
    <string name="intermedio1">APLICACIONES ÚTILES</string>
    <string name="intermedio2">REDES SOCIALES</string>
    <string name="intermedio3">USO DE REDES SOCIALES</string>

    <!--AVANZADO LEVEL-->
    <string name="avanzado1">APLICACIONES MÁS UTILIZADAS</string>
    <string name="avanzado2">CONFIGURACION AVANZADA</string>
    <string name="avanzado3">NAVEGAR POR INTERNET</string>

=======
<<<<<<< HEAD
=======

    <!--INTERMEDIO LEVEL-->
    <string name="intermedio1">REDES SOCIALES</string>
    <string name="intermedio2">MUSICA/RADIO</string>
    <string name="intermedio3">DESCARGA DE APLICACIONES</string>
    <string name="intermedio4">APLICACIONES UTILES</string>

    <!--AVANZADO LEVEL-->
    <string name="avanzado1">CORREO ELECTRONICO</string>
    <string name="avanzado2">CONFIGURACION AVANZADA DEL CELULAR</string>
    <string name="avanzado3">NAVEGAR POR INTERNET</string>


    <string name="opcionesInicial">OPCIONES PARA JUGAR</string>
    <string name="inicialOpc">nivel inicial</string>
>>>>>>> a750cbe73a94b14198f76895f838e894c7b222d6

    <!--INTERMEDIO LEVEL-->
    <string name="intermedio1">APLICACIONES UTILES</string>
    <string name="intermedio2">REDES SOCIALES</string>
    <string name="intermedio3">USO DE REDES SOCIALES</string>

    <!--AVANZADO LEVEL-->
    <string name="avanzado1">CORREO ELECTRONICO</string>
    <string name="avanzado2">CONFIGURACION AVANZADA</string>
    <string name="avanzado3">NAVEGAR POR INTERNET</string>

>>>>>>> 96755b89d81283293e2ad2ac2f8d2072f0d08b35

    <!--JUEGO-->
    <string name="txtLogro">LOGRO:</string>
    <string name="txtCorrectas">CORRECTAS</string>
    <!--About app-->
<<<<<<< HEAD
=======
<<<<<<< HEAD
>>>>>>> 96755b89d81283293e2ad2ac2f8d2072f0d08b35
    <string name="aboutAppterminos">TERMINOS Y CONDICIONES</string>
    <string name="aboutAppContentTerminos">
        Mediante el acceso y uso de esta aplicación, aceptas los términos de servicio de NonaSoft. En caso de no aceptar alguna de las condiciones en los términos de servicio, por favor no continúe usando la aplicación.


Los contenidos de Nonasoft son de carácter informativo y referencial, tienen el objetivo de ayudar a los usuarios a comprender el funcionamiento de aplicaciones y sitios web que no tienen relación con Nonasoft. Nonasoft no será responsable por cualquier inexactitud, utilidad o disponibilidad en el contenido de la aplicación.
NonaSoft no se responsabiliza por el uso de aplicaciones, sitios web, o cualquier contenido de terceros referenciado en esta aplicación.
NonaSoft se guarda el dereho de eliminar, agregar o modificar información contenida en la aplicación en cualquier momento.


El usuario no puede modificar, copiar, reproducir, cargar, publicar, transmitir o distribuir el contenido de Nonasoft con fines comerciales.
    </string>

    <string name="aboutApptTitle">ACERCA DE LA APLICACION</string>
    <string name="aboutAppContent">NonaSoft es una aplicación nacida de una necesidad muy común (en especial en usuarios de la tercera edad) de tener información confiable y fácil de comprender a tu alcance, a la hora de aprender a usar redes sociales y otras aplicaciones esenciales en la vida cotidiana de hoy.
Nuestro objetivo es proveer una plataforma en la que puedas encontrar la información que necesites para aprender el uso básico de estas aplicaciones y puedas disfrutar de su utilidad sin perder tiempo o tener que recurrir a alguien que te ayude.
Queremos darte independencia a la hora de avanzar por nuevos caminos y superar sus obstáculos, y fomentar ese espíritu aventurero de lanzarse hacia nuevas fronteras. NonaSoft es nuestra manera de acompañarte y darte la ayuda que necesites para seguir aprendiendo, y esperamos facilitar tu experiencia de la mejor manera posible.
</string>
    <string name="aboutAppContent1">DESARROLLADORES</string>
    <string name="aquino">Aquino Sergio</string>
    <string name="atencio">Atencio Ezequiel</string>
    <string name="castillo">Castillo Nicolas</string>
    <string name="denis">Denis Adara</string>
    <string name="enriquez">Enriquez Yoel</string>
    <string name="niesi">Niesi Tomas</string>
    <string name="vega">Vega Laura</string>

    <!--MINIJUEGO-->
<<<<<<< HEAD
=======
=======
    <string name="aboutApp">NONASOFT</string>
    <string name="aboutAppContent">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor </string>
    <string name="aboutAppContent1">Desarrolladores</string>
>>>>>>> a750cbe73a94b14198f76895f838e894c7b222d6
>>>>>>> 96755b89d81283293e2ad2ac2f8d2072f0d08b35
    <string name="title_activity_mini_juego">MiniJuegoActivity</string>
    <string name="opciones">Opciones</string>
    <string name="logros">Logros de usuario</string>
    <string name="salir">salir</string>
<<<<<<< HEAD
=======
<<<<<<< HEAD
>>>>>>> 96755b89d81283293e2ad2ac2f8d2072f0d08b35
    <string name="condiciones">Acerca de la aplicacion</string>

    <!--logros.xml-->
    <string name="nivelInicial">NIVEL INCIAL</string>
    <string name="nivelIntermedio">NIVEL INTERMEDIO</string>
    <string name="nivelAvanzado">NIVEL AVANZADO</string>
<<<<<<< HEAD

=======
=======
    <string name="condiciones">Terminos y condiciones</string>

>>>>>>> a750cbe73a94b14198f76895f838e894c7b222d6
>>>>>>> 96755b89d81283293e2ad2ac2f8d2072f0d08b35

</resources>
