<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:weightSum="1">
    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_ingreso"
        android:textColor="#fff"
        android:textSize="21sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textAlignment="center"/>

    <RelativeLayout
        android:layout_width="327dp"
        android:layout_height="102dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtusername"
            android:visibility="invisible"
            android:textColor="@color/withe"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/username"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/placeholderName"
            android:textColor="@color/grey"
            android:fontFamily="monospace"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/txtName"
            android:layout_alignStart="@+id/txtName" />

        <requestFocus />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="328dp"
        android:layout_height="102dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtpassword"
            android:textColor="@color/withe"
            android:visibility="invisible"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_above="@+id/password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/placeholderPass"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/txtPassword"
            android:layout_alignStart="@+id/txtPassword" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="158dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.39">

        <Button
            android:id="@+id/login"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:textAlignment="center"
            android:textColor="@color/withe"
            android:background="@drawable/pressed_button"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/showpassword"
            android:layout_centerHorizontal="true" />


        <CheckBox
            android:id="@+id/showpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/verpass"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/login"
            android:layout_alignEnd="@+id/login" />

<<<<<<< HEAD
        <CheckBox
            android:id="@+id/rememberme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/rememberme"
            android:layout_above="@+id/login"
            android:layout_alignLeft="@+id/login"
            android:layout_alignStart="@+id/login" />

=======
>>>>>>> test
        <Button
            android:id="@+id/registro"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textAlignment="center"
            android:textColor="@color/withe"
            android:background="@color/purpure"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="54dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noaccount"
            android:textColor="@color/withe"
            android:id="@+id/textView2"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp" />


    </RelativeLayout>


</LinearLayout>