<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/blue"
    android:gravity="top|bottom">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="139dp"
        android:text="@string/introduccionOne"
        android:textSize="23sp"
        android:background="@color/blue"
        android:textColor="#fff"
        android:typeface="normal"
        android:textAlignment="center"
        android:paddingTop="40dp"
        android:layout_weight="0.87"
        android:padding="10dp"
        android:layout_marginTop="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="58dp"
                android:layout_height="83dp"
                android:background="@drawable/abc_btn_check_to_on_mtrl_015"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp" />
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/imgIntroductionTwo"
                android:layout_gravity="left"
                android:textSize="18sp"
                android:textAlignment="center"
                android:paddingLeft="5dp"
                android:textColor="#fff"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="80dp"
                android:background="@drawable/abc_ratingbar_small_material"

                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:text="@string/imgIntroductionTrhee"
                android:textAlignment="center"
                android:textSize="18sp"
                android:paddingLeft="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#fff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="61dp"
                android:layout_height="86dp"
                android:background="@drawable/ic_menu_camera"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/imgIntroductionOne"
                android:layout_gravity="left"
                android:textAlignment="center"
                android:textSize="18sp"
                android:paddingLeft="5dp"
                android:textColor="#fff"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:weightSum="1">

        <Button
            android:layout_width="171dp"
            android:layout_height="66dp"
            android:gravity="top"
            android:id="@+id/btnNext"
            android:layout_marginLeft="180dp"
            android:text="@string/siguiente"
            android:textSize="20sp"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textColor="#fff"
            android:background="@drawable/pressed_button" />

    </LinearLayout>

</LinearLayout>