<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/opcionesInicial"
        android:textAlignment="center"
        android:textColor="@color/purpure"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/boton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <Button
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
        android:drawablePadding="8dp"
        android:id="@+id/boton"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/fuccia"
        android:text="@string/galeryimg"
        android:layout_below="@+id/boton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3"></LinearLayout>

    <Button
        android:layout_width="385dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_phone_forwarded_black_24dp"
        android:drawablePadding="8dp"
        android:id="@+id/boton"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/purpure"
        android:text="@string/gContacts"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout4"
        android:layout_alignStart="@+id/linearLayout4"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_person_add_black_24dp"
        android:drawablePadding="8dp"
        android:id="@+id/boton"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/clearpurpure"
        android:text="@string/llamadas"
        android:layout_weight="0.59"
        android:layout_gravity="bottom"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/inicialOpc"
        android:textAlignment="center"
        android:textColor="@color/purpure"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/boton"
        android:layout_alignEnd="@+id/boton" />
</RelativeLayout>